# P2_BaCa

./: .gitignore  CMakeLists.txt  LICENSE  MarkdownCheatSheet.md  README.md
BaCa_P2/: CMakeLists.txt  README.md
BaCa_P2/zadanieA/: README.md
BaCa_P2/zadanieA/UT/: ComparationTest.cpp  ElementOperationsTest.cpp  SetCreationTest.cpp
BaCa_P2/zadanieA/src/: BitSetLib.cpp
BaCa_P2/zadanieA/src/set/: SetUtils.cpp  SetUtils.hpp
BaCa_P2/zadanieB/: CMakeLists.txt
BaCa_P2/zadanieB/UT/: FunctionalLibAddTest.cpp  FunctionalLibMultTest.cpp  FunctionalLibOperationTest.cpp  MathAddingOnStringsTest.cpp  Math_Add_Test.cpp  Math_Mult_Test.cpp  SupportFunctionsTest.cpp
BaCa_P2/zadanieB/src/: CMakeLists.txt  FunctionsLib.cpp  FunctionsLib.hpp
BaCa_P2/zadanieB/src/MathOnStrings/: Add.cpp  Add.hpp  Mult.cpp  Mult.hpp  Utils.cpp  Utils.hpp
BaCa_P2/zadanieB/src/MyMathOnStrings/: Addition.cpp  Addition.hpp  Multiplication.cpp
KSI/: CMakeLists.txt
logger/: ArhLogger.hpp  CMakeLists.txt  Logger.hpp  LoggingLevel.cpp  LoggingLevel.hpp
zadanieA/: CMakeLists.txt  README.md
zadanieA/UT/: CommonValues.hpp  MathTest.cpp  OrderTest.cpp  PrintTest.cpp  SetArythmeticsTest.cpp  SetTest.cpp
zadanieA/src/: BitSetLib.cpp  BitSetLib.hpp  CMakeLists.txt
zadanieA/src/math/: MathUtils.cpp  MathUtils.hpp
zadanieA/src/set/: SetUtils.cpp
zadanieB/: CMakeLists.txt  README.md
zadanieB/UT/: EmptyTest.cpp  MathSubstitutingOnStringsTest.cpp  SupportFunctionsTest.cpp
zadanieB/src/: CMakeLists.txt  FunctionsLib.cpp  FunctionsLib.hpp  VariadicArgsUtils.cpp  VariadicArgsUtils.hpp
zadanieB/src/MyMathOnStrings/: Addition.hpp  Multiplication.hpp  Utils.cpp  Utils.hpp
